--- a/style.css
+++ b/style.css
@@ -1,13 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
 
-*,
-*::after,
-*::before{
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
-}
-
 html{
     font-size: 62.5%;
 }
@@ -456,7 +448,7 @@ body{
         display: block;
     }
     .navbar-container{
-        display: block;
+        display: contents;
         position: relative;
         height: 64px;
     }
@@ -490,20 +482,6 @@ body{
         border-radius: 10px;
         background: #333; 
     }
-    .navbar-container .hamburger-lines .line1{
-        transform-origin: 0% 0%;
-        transition: transform 0.4s ease-in-out;
-    }
-
-    .navbar-container .hamburger-lines .line2{
-        transition: transform 0.4s ease-in-out;
-    }
-
-    .navbar-container .hamburger-lines .line3{
-        transform-origin: 0% 100%;
-        transition: transform 0.4s ease-in-out;
-    }
-
     .navbar .menu-items{
         padding-top: 100px;
         background: #fff;
